fix: don't center incoming channel description
We used to also center group descriptions, but we stopped doing that in
12305f4b45d3926d7678f0185c5ffaea38f04667
(https://github.com/deltachat/deltachat-desktop/pull/6168).

On Android the channel description is also not centered.

--- a/packages/frontend/src/components/ProfileInfoHeader/styles.module.scss
+++ b/packages/frontend/src/components/ProfileInfoHeader/styles.module.scss
@@ -22,6 +22,7 @@
 }
 
 .description {
+  text-align: initial;
   // Copy-pasted from `.group-profile-description` and `.statusText`.
   white-space: pre-wrap;
   word-break: break-word;
